--- a/config.json
+++ b/config.json
@@ -8,6 +8,7 @@
     {
         "verona/inngang_ute": {
             "trigger": "1",
+            "message": "Bevegelse utenfor inngang",
             "telegram_actions": 
                 [
                     "send_image", 
@@ -16,6 +17,7 @@
         }, 
         "verona/inngang_inne": {
             "trigger": "1",
+            "message": "Bevegelse inne ved inngang",
             "telegram_actions": 
                 [
                     "send_message"
